--- a/package.json
+++ b/package.json
@@ -35,30 +35,31 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@nutui/nutui-taro": "^3.1.8",
+    "@tarojs/components": "3.4.4",
+    "@tarojs/plugin-framework-vue3": "3.4.4",
+    "@tarojs/plugin-html": "3.4.4",
+    "@tarojs/plugin-less": "^2.2.10",
     "@tarojs/runtime": "3.4.4",
     "@tarojs/taro": "3.4.4",
-    "@tarojs/components": "3.4.4",
-    "@tarojs/plugin-html": "3.4.4",
-    "@tarojs/plugin-framework-vue3": "3.4.4",
-    "vue": "^3.0.0",
-    "@nutui/nutui-taro": "^3.1.8"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@tarojs/mini-runner": "3.4.4",
-    "@tarojs/webpack-runner": "3.4.4",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "3.4.4",
-    "babel-preset-taro": "3.4.4",
-    "babel-plugin-import": "^1.13.3",
-    "@vue/compiler-sfc": "^3.0.0",
-    "vue-loader": "^16.0.0-beta.8",
-    "eslint-plugin-vue": "^7.0.0",
-    "eslint-config-taro": "3.4.4",
-    "eslint": "^6.8.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^2.x",
+    "@tarojs/mini-runner": "3.4.4",
+    "@tarojs/webpack-runner": "3.4.4",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.x",
-    "typescript": "^3.7.0"
+    "@typescript-eslint/parser": "^2.x",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-plugin-import": "^1.13.3",
+    "babel-preset-taro": "3.4.4",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.4.4",
+    "eslint-plugin-vue": "^7.0.0",
+    "stylelint": "9.3.0",
+    "typescript": "^3.7.0",
+    "vue-loader": "^16.0.0-beta.8"
   }
 }
